--- a/History.txt
+++ b/History.txt
@@ -1,2 +1,3 @@
+* 0.0.3	- updated to new google api and switched to rspec
 * 0.0.2 - switched to googlebase for google auth and requests
 * 0.0.1 - initial relase
