--- a/History.txt
+++ b/History.txt
@@ -1,3 +1,4 @@
+* 0.0.4 - Added new #pageviews_by_day and #visits_by_day methods which return collection of days and values
 * 0.0.3	- updated to new google api and switched to rspec
 * 0.0.2 - switched to googlebase for google auth and requests
 * 0.0.1 - initial relase
